Tue Aug 14 19:28:23 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Call datalink->stop() if the pending_release_ binding fails.

Tue Aug 14 07:29:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/DCPS/Messenger.minimal/MessengerMinimal.mpc:
          File header change

        * MPC/config/dds_model.mpb:
          Changed this to use the new feature dds_model. This is enabled by
          default, but can be set to zero which disabled all projects that
          use the opendds dds_model library

Mon Aug 13 21:49:33 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendListener.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Fixed ACE Logging usage issues.

Sun Aug 12 19:03:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcpsDomain.idl:
        * dds/DdsDcpsInfrastructure.idl:
        * dds/DdsDcpsPublication.idl:
        * dds/DdsDcpsSubscription.idl:
        * dds/DdsDcpsTopic.idl:
          Updated ciao lem

Fri Aug 10 21:08:28 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        Integrated changes from Scott Harris and Tim Bradley:

        * dds/DCPS/transport/framework/RemoveAllVisitor.cpp:
        * dds/DCPS/transport/framework/TransportQueueElement.inl:

          msg_payload() and msg() methods of TransportQueueElement can return
          NULL pointers.  Especially in the case of msg_payload(), there are
          queue elements that have a header but no payload.

        * dds/DCPS/transport/framework/DataLink.cpp:

          handle_timeout() calls the new unbind_link() method on the transport,
          which allows the link to be removed from transport-specific data
          structures.  The rest of handle_timeout() was equivalent to stop().
          pre_stop_i() is now called from stop().

        * dds/DCPS/transport/framework/TransportImpl.h: